--- a/MeuAgenteMcp.csproj
+++ b/MeuAgenteMcp.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0-*" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0-*" />
 		<PackageReference Include="Microsoft.Extensions.AI" Version="10.0.0-*" />
+		<PackageReference Include="Scalar.AspNetCore" Version="2.0.0-*" />
 	</ItemGroup>
 
 </Project>
